fixed add module button wrapping when there is still space for it

--- a/Frontend/styles.css
+++ b/Frontend/styles.css
@@ -458,7 +458,7 @@ homepage
     line-height: 40px;
     border-radius: 20px;
     font-size: 15px;
-    margin-right: 50px;
+    margin-right: 49px;
     /* background-color:rgb(0, 255, 229); */
     box-shadow: 0px 1px 3px 3px rgba(0,0,0,0.3);
 }
